// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders CircleIcon 1`] = `
<CircleIcon
  style={
    Object {
      "fill": "#ff0000",
      "stroke": "rgb(106,173,213)",
      "strokeWidth": "1px",
    }
  }
/>
`;

exports[`Renders LineIcon 1`] = `
<LineIcon
  style={
    Object {
      "stroke": "rgb(106,173,213)",
      "strokeWidth": "4px",
    }
  }
/>
`;

exports[`Renders PolygonIcon 1`] = `
<PolygonIcon
  style={
    Object {
      "fill": "#ff0000",
      "stroke": "rgb(106,173,213)",
      "strokeWidth": "1px",
    }
  }
/>
`;

exports[`Renders SymbolIcon 1`] = `
<SymbolIcon
  fill="#ff0000"
  key="airfield-15#ff0000rgb(106,173,213)"
  stroke="rgb(106,173,213)"
  style={Object {}}
  symbolId="airfield-15"
/>
`;
